# fastapi-dnd

./: .gitignore  Procfile  README.md  characters.json  config.py  pyproject.toml  requirements.txt  sample-spell.json  spells.json  team.json
app/: __init__.py  json.py  main.py  models.py  scheduler.py  views.py
app/api/: character.py  equipment.py  monster.py  spell.py  views.py
app/database/: ability_scores.py  characters.py  database.py  database_motor.py  equipment.py  equipment_categories.py  monsters.py  skills.py  spells.py
app/routers/: ability_scores.py  characters.py  equipment.py  equipment_categories.py  monsters.py  skills.py  spells.py
app/schema/: ability_scores.py  characters.py  equipment.py  equipment_categories.py  monsters.py  skills.py  spells.py
app/scripts/: character_calc.py
app/util/: base_to_foundry.py
db-files/: 5e-SRD-Monsters.json  feats.json  spells-srd.json  team.json
db-files/5e-SRD/: README.md
scripts/: Archive_MongoDB.sh  generate_casting.py  generate_id.py  generate_material.py  generate_subclasses.py  mongo_test.py  run.sh  spells.json
